# flowey-fight

./: .gitignore  CMakeLists.txt  Menu.h  README.md  TODO.md  commitpush  console.h  consoleaudio.h  gettodos  mk-todolist  myaudio.h  pullsubtree  pushsubtree  todolist.txt
lib/cppLibrary/: README.md  consoleaudio.h  gettodos.txt  myaudio.h
src/: flowey.cpp
